# snoonu-mcp-server

./: .dockerignore  Readme.md  pyproject.toml
.github/workflows/: deploy.yml
deploy/gcloud/: deploy.sh  service.yaml.tpl
deploy/gcloud/db/: 01-schema.sql  02-seed-data.sql  Dockerfile
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/prometheus/: prometheus.yml
scripts/: fetch_openfoodfacts.py  fetch_product_images.py  generate_seed.py  product_image_map.json  seed.py
src/: activity_log.py  cache.py  logging_config.py  metrics.py  middleware.py  order_rate_limit.py  redis_client.py  server.py
src/api/: base.py  client.py  exceptions.py
src/api/database/: session.py
src/api/database/models/: __init__.py  categories.py  cities.py  order_items.py  orders.py  products.py
src/api/database/repositories/: categories.py  cities.py  orders.py  products.py
src/config/: settings.py
src/tools/: categories.py  delivery.py  orders.py
tests/: test_orders.py  test_products.py
tests/e2e/: conftest.py  test_http_endpoints.py  test_mcp_protocol.py  test_rate_limit.py
