[project]
name = "snoonu-mcp"
version = "0.1.0"
description = "Mock MCP server exposing Snoonu's catalog/delivery/order tools for LLM agents."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "faker>=24.0",
    "uvicorn>=0.30",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

pip install -e ".[dev]"